src/objects/Domain__c.object
<CustomObject>
    <fields>
        <fullName>cpCasesIn30Days__c</fullName>
        <label>Domain_cp_cases_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpCasesIn60Days__c</fullName>
        <label>Domain_cp_cases_n_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpCasesIn90Days__c</fullName>
        <label>Domain_cp_cases_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpFirstFormSubmissionDate__c</fullName>
        <label>Domain_cp_first_form_submission_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpFormsIn30Days__c</fullName>
        <label>Domain_cp_forms_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpFormsIn60Days__c</fullName>
        <label>Domain_cp_forms_in_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpFormsIn90Days__c</fullName>
        <label>Domain_cp_forms_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpHasApp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_cp_has_app</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpIncomingSmsIn30Days__c</fullName>
        <label>Domain_cp_incoming_sms_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpIncomingSmsIn60Days__c</fullName>
        <label>Domain_cp_incoming_sms_in_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpIncomingSmsIn90Days__c</fullName>
        <label>Domain_cp_incoming_sms_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_cp_is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpLastFormSubmissionDate__c</fullName>
        <label>Domain_cp_last_form_submission_date__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpOutgoingSmsIn30Days__c</fullName>
        <label>Domain_cp_outgoing_sms_in_30_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpOutgoingSmsIn60Days__c</fullName>
        <label>Domain_cp_outgoing_sms_in_60_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpOutgoingSmsIn90Days__c</fullName>
        <label>Domain_cp_outgoing_sms_in_90_days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>creating_user__c</fullName>
        <label>Domain_creating_user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cs_interactions__c</fullName>
        <description>The number of times a customer has received CS Support (tickets or email)</description>
        <inlineHelpText>Increment by 1 each time a CS interaction occurs</inlineHelpText>
        <label>Number of CS Interactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currency_code__c</fullName>
        <label>Domain_currency_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custom_case_username__c</fullName>
        <label>Domain_custom_case_username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custom_chat_template__c</fullName>
        <label>Domain_custom_chat_template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_type__c</fullName>
        <label>Domain_customer_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>Domain_date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>default_mobile_worker_redirect__c</fullName>
        <label>Domain_default_mobile_worker_redirect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_sms_backend_id__c</fullName>
        <label>Domain_default_sms_backend_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_sms_response__c</fullName>
        <label>Domain_default_sms_response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>default_timezone__c</fullName>
        <label>Domain_default_timezone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <label>Domain_description</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>domain_type1__c</fullName>
        <formula>if(commtrack_enabled__c,&quot;commtrack&quot;,&quot;commcare&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>domain_type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>download_count__c</fullName>
        <label>Domain_download_count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>downloads__c</fullName>
        <label>Domain_downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>filter_surveys_from_chat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_filter_surveys_from_chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>full_downloads__c</fullName>
        <label>Domain_full_downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>has_careplan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_has_careplan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_custom_logo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_has_custom_logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hipaa_compliant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_hipaa_compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hr_name__c</fullName>
        <label>Domain_hr_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>Domain_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_shared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_sms_billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_sms_billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_snapshot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_is_snapshot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_test__c</fullName>
        <label>Domain_is_test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>launch_date__c</fullName>
        <label>Domain_launch_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>license__c</fullName>
        <label>Domain_license</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>location_restriction_for_users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_location_restriction_for_users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>locations_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_locations_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>multimedia_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_multimedia_included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>name_of_publisher__c</fullName>
        <label>Domain_name_of_publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>offset__c</fullName>
        <label>offset (internal use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>organization__c</fullName>
        <label>Domain_organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>power_of_one__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>power of one</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_type__c</fullName>
        <label>Domain_project_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>publisher__c</fullName>
        <label>Domain_publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>restrict_superusers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_restrict_superusers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>secure_submissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_secure_submissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>send_to_duplicated_case_numbers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_send_to_duplicated_case_numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>short_description__c</fullName>
        <label>Domain_short_description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>show_invalid_survey_responses_in_chat__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domshow_invalid_survey_responses_in_chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sms_case_registration_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_sms_case_registration_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sms_case_registration_owner_id__c</fullName>
        <label>Domain_sms_case_registration_owner_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sms_case_registration_type__c</fullName>
        <label>Domain_sms_case_registration_type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sms_case_registration_user_id__c</fullName>
        <label>Domain_sms_case_registration_user_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sms_conversation_length__c</fullName>
        <label>Domain_sms_conversation_length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sms_mobile_worker_registration_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dosms_mobile_worker_registration_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>snapshot_time__c</fullName>
        <label>Domain_snapshot_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>submitted_form__c</fullName>
        <formula>cpAllForms__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>submitted form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>subscription_notes__c</fullName>
        <description>Notes on the subscription - upsell, implementation renewal, product renewal</description>
        <inlineHelpText>Notes on the subscription - upsell, implementation renewal, product renewal</inlineHelpText>
        <label>Subscription notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>supports_multiple_locations_per_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_SupportsMultipleLlocationsPerUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>survey_management_enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_survey_management_enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tags__c</fullName>
        <label>Domain_tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>Domain_title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_downloads__c</fullName>
        <label>Domain_total_downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>use_cloudcare_releases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_use_cloudcare_releases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>use_default_sms_response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domain_use_default_sms_response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>use_sql_backend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>use_sql_backend</label>
        <type>Checkbox</type>
    </fields>
    <label>Domain</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>date_created__c</columns>
        <columns>is_active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CRS_Test</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Deployment_country__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Enterprise_Project_Space__c</columns>
        <columns>Email__c</columns>
        <columns>Likely_Real__c</columns>
        <columns>Deployment_Countries__c</columns>
        <columns>is_active__c</columns>
        <columns>is_test__c</columns>
        <columns>launch_date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>contains</operation>
            <value>@crs.org</value>
        </filters>
        <label>CRS Test</label>
    </listViews>
    <listViews>
        <fullName>Domain_info_CJ</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Account__c</columns>
        <columns>Country_of_deployment_salesforce__c</columns>
        <columns>Deployment_Countries__c</columns>
        <columns>organization__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Likely_Real__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>is_test__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filters>
        <label>Domain info CJ</label>
    </listViews>
    <listViews>
        <fullName>Domains_Missing_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>cpIsActive__c</columns>
        <columns>Opportunity__c</columns>
        <columns>InternalProp_organization_name__c</columns>
        <columns>creating_user__c</columns>
        <columns>organization__c</columns>
        <columns>cpActiveMobileUsers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Lifetime_MRR__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>cpIsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Domains Missing Accounts</label>
    </listViews>
    <listViews>
        <fullName>Domains_missing_accounts_2nd_phase</fullName>
        <columns>NAME</columns>
        <columns>InternalProp_organization_name__c</columns>
        <columns>Account__c</columns>
        <columns>Email__c</columns>
        <columns>InternalProp_sf_account_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Lifetime_MRR__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Domains missing accounts - 2nd phase</label>
    </listViews>
    <listViews>
        <fullName>IRC_Test</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Email__c</columns>
        <columns>is_active__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Enterprise_Project_Space__c</columns>
        <columns>Deployment_country__c</columns>
        <columns>is_test__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>contains</operation>
            <value>@rescue.org</value>
        </filters>
        <label>IRC_Test</label>
    </listViews>
    <listViews>
        <fullName>Non_inside_sale_domain_missing_Origin</fullName>
        <columns>NAME</columns>
        <columns>Origin_of_project_space__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lifetime_MRR__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Is_Inside_Sales__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Origin_of_project_space__c</field>
            <operation>equals</operation>
        </filters>
        <label>Non inside sale domain missing Origin</label>
    </listViews>
    <listViews>
        <fullName>PIH_Test</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Email__c</columns>
        <columns>is_active__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>Enterprise_Project_Space__c</columns>
        <columns>Deployment_country__c</columns>
        <columns>is_test__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>contains</operation>
            <value>@pih.org</value>
        </filters>
        <label>PIH_Test</label>
    </listViews>
    <listViews>
        <fullName>RTI_Test</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>creating_user__c</columns>
        <columns>Deployment_country__c</columns>
        <columns>Lifetime_MRR__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Enterprise_Project_Space__c</columns>
        <columns>Deployment_Countries__c</columns>
        <columns>Country_of_deployment_salesforce__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>contains</operation>
            <value>@rti.org</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>RTI</value>
        </filters>
        <label>RTI Test</label>
    </listViews>
    <nameField>
        <label>Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Domain</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>